--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "presidential-election-data": "^2.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-modal": "^1.7.7",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
     "webpack": "^2.5.1"
