--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack --watch"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +16,15 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "d3": "^4.9.1",
-    "presidential-election-data": "^2.0.0",
+    "presidential-election-data": "^2.1.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-modal": "^1.7.7",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
-    "webpack": "^2.5.1"
+    "webpack": "^4.43.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.11"
   }
 }
